Fix plugin startup freeze and JSON parsing crash
The GUI would freeze on first launch because the JavaFX Application Thread
was blocked inside MainApp while CondaEnvironmentFinder waited for user
input (lock.wait).  Move the conda-path lookup to a daemon thread so the
loading screen renders immediately and Swing dialogs can receive events.

JavaConnector crashed with JsonSyntaxException when the Python server sent
a plain-text error message instead of a JSON object (e.g. an unhandled
traceback).  Wrap the Gson parse in a try-catch and route non-JSON payloads
to the error log.

Additional hardening:
- UltrackConnector.startServer: guard against a null/empty ultrackPath
  before launching the subprocess, showing a clear error dialog instead of
  a silent NullPointerException.
- CondaEnvironmentFinder.updateCondaEnvironments: switch from
  Runtime.exec(String) to ProcessBuilder so conda paths containing spaces
  are handled correctly on Windows.
- ultrack_server.js: guard against undefined fetch response data and add a
  .catch() so network errors during server polling are logged rather than
  silently swallowed.

Fixes royerlab/ultrack#160, royerlab/ultrack#243, royerlab/ultrack-imagej#4